media query para mobile

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ysabeau+Office:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Belanosima&family=Dosis:wght@700&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="https://i.postimg.cc/jS8ZtFLK/My-Music-7.png">
   <link rel="stylesheet" href="style.css" />
   <title>Document</title>
 </head>
